# purpura

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: auth.py  config.py  db.py  main.py  models.py  seed.py
app/services/: adjudicacion.py  evaluacion_ia.py  notificar.py  reportes.py  transiciones.py
app/static/: legacy_sprint1.css
app/static/css/: landing.css  purpura.css  udem.css
app/static/images/: README.md
app/templates/: _macros.html  bandeja.html  base.html  convocatorias_adjudicar.html  convocatorias_archivadas.html  convocatorias_detalle.html  convocatorias_editar.html  convocatorias_form.html  convocatorias_list.html  dashboard.html  documentacion.html  landing.html  login.html  mis_monitorias.html  mis_postulaciones.html  notificaciones.html  perfil.html  postulacion_detalle.html  reportes.html
deploy/: .env.prod.example  Dockerfile  README.md  docker-compose.yml
docs/entrega/: entrega_release1.md
docs/sustentacion/: guion.md
scripts/: generate_logo_variants.py  generate_release_pdf.py  verify_ia_real.py
tests/: e2e_release1.py  manual_e2e.py  visual_validation.py
