[project]
name = "purpura"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.46.0",
]

[project.scripts]
seed = "app.seed:main"
e2e = "tests.manual_e2e:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "tests"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "playwright>=1.59.0",
]

